Catch up to Genesis Sample 2.3.1

--- a/src/scss/base/_tables.scss
+++ b/src/scss/base/_tables.scss
@@ -1,24 +1,4 @@
-/* ## Objects
---------------------------------------------- */
-
-embed,
-iframe,
-img,
-object,
-video,
-.wp-caption {
-  max-width: 100%;
-}
-
-img {
-  height: auto;
-}
-
-figure {
-  margin: 0;
-}
-
-/* ## Tables
+/* Tables
 --------------------------------------------- */
 
 table {
@@ -27,7 +7,7 @@ table {
   line-height: 2;
   margin-bottom: 40px;
   width: 100%;
-  word-break: break-word;
+  word-break: break-all;
 }
 
 tbody {
