--- a/src/scss/base/_toc.scss
+++ b/src/scss/base/_toc.scss
@@ -1,4 +1,4 @@
-/* # Table of Contents
+/* Table of Contents
 - HTML5 Reset
 	- Baseline Normalize
 	- Box Sizing
@@ -25,6 +25,7 @@
 	- Featured Content
 - Plugins
 	- Genesis eNews Extended
+	- Genesis Simple FAQ
 	- Jetpack
 - Skip Links
 - Site Header
