--- a/src/scss/layout/_columns.scss
+++ b/src/scss/layout/_columns.scss
@@ -1,4 +1,4 @@
-/* ## Column Classes
+/* Column Classes
 --------------------------------------------- */
 /* Link: http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css */
 
