--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,8 +1,8 @@
 .footer-widgets {
   background-color: #fff;
+  clear: both;
   font-size: 18px;
   font-size: 1.8rem;
-  clear: both;
   padding: 60px 0;
 }
 
@@ -26,7 +26,7 @@
 }
 
 
-/* # Site Footer
+/* Site Footer
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
