--- a/src/scss/layout/_widgets.scss
+++ b/src/scss/layout/_widgets.scss
@@ -1,4 +1,4 @@
-/* # Widgets
+/* Widgets
 ---------------------------------------------------------------------------------------------------- */
 
 .widget {
@@ -43,7 +43,7 @@
   text-align: center;
 }
 
-/* ## Featured Content
+/* Featured Content
 --------------------------------------------- */
 
 .featured-content .entry {
