--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -1,4 +1,4 @@
-/* ## Forms
+/* Forms
 --------------------------------------------- */
 
 input,
@@ -53,22 +53,22 @@ input[type="submit"],
   width: auto;
 }
 
-button:hover,
-input:hover[type="button"],
-input:hover[type="reset"],
-input:hover[type="submit"],
-.button:hover,
 button:focus,
-input:focus[type="button"],
-input:focus[type="reset"],
-input:focus[type="submit"],
-.button:focus  {
+button:hover,
+input[type="button"]:focus,
+input[type="button"]:hover,
+input[type="reset"]:focus,
+input[type="reset"]:hover,
+input[type="submit"]:focus,
+input[type="submit"]:hover,
+.button:focus,
+.button:hover {
   background-color: #c3251d;
   color: #fff;
 }
 
-.entry-content .button:hover,
-.entry-content .button:focus {
+.entry-content .button:focus,
+.entry-content .button:hover {
   color: #fff;
 }
 
