--- a/src/scss/base/_print.scss
+++ b/src/scss/base/_print.scss
@@ -1,8 +1,8 @@
 @media print {
 
   *,
-  *:before,
-  *:after {
+  *::before,
+  *::after {
     background: transparent !important;
     box-shadow: none !important;
     color: #000 !important;
@@ -14,17 +14,17 @@
     text-decoration: underline;
   }
 
-  a[href]:after {
+  a[href]::after {
     content: " (" attr(href) ")";
   }
 
-  abbr[title]:after {
+  abbr[title]::after {
     content: " (" attr(title) ")";
   }
 
-  a[href^="javascript:"]:after,
-  a[href^="#"]:after,
-  .site-title > a:after {
+  a[href^="javascript:"]::after,
+  a[href^="#"]::after,
+  .site-title > a::after {
     content: "";
   }
 
