--- a/src/scss/base/_type.scss
+++ b/src/scss/base/_type.scss
@@ -1,4 +1,4 @@
-/* ## Typographical Elements
+/* Typographical Elements
 --------------------------------------------- */
 
 html {
@@ -7,6 +7,7 @@ html {
 
 /* Chrome fix */
 body > div {
+  font-size: 20px;
   font-size: 2rem;
 }
 
@@ -43,14 +44,14 @@ a {
   text-decoration: underline;
 }
 
-a:hover,
-a:focus {
+a:focus,
+a:hover {
   color: #333;
   text-decoration: none;
 }
 
 p {
-  margin: 0 0 28px;
+  margin: 0 0 30px;
   padding: 0;
 }
 
@@ -84,6 +85,11 @@ i {
   font-style: italic;
 }
 
+mark {
+  background: #ddd;
+  color: #000;
+}
+
 blockquote {
   margin: 40px;
 }
@@ -99,7 +105,7 @@ blockquote::before {
   top: -10px;
 }
 
-/* ## Headings
+/* Headings
 --------------------------------------------- */
 
 h1,
