--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -6,7 +6,7 @@
   padding: 20px 0;
 }
 
-/* ## Title Area
+/* Title Area
 --------------------------------------------- */
 
 .title-area {
@@ -34,8 +34,8 @@
 }
 
 .site-title a,
-.site-title a:hover,
-.site-title a:focus {
+.site-title a:focus,
+.site-title a:hover {
   color: #333;
   text-decoration: none;
 }
@@ -66,7 +66,7 @@
   text-indent: -9999px;
 }
 
-/* ## Widget Area
+/* Widget Area
 --------------------------------------------- */
 
 .site-header .widget-area {
