--- a/src/scss/layout/_mq.scss
+++ b/src/scss/layout/_mq.scss
@@ -88,8 +88,8 @@
   .footer-widgets-1,
   .footer-widgets-2,
   .footer-widgets-3,
-  .js .genesis-nav-menu .sub-menu a,
-  .js .genesis-nav-menu .sub-menu,
+  .genesis-responsive-menu .genesis-nav-menu .sub-menu,
+  .genesis-responsive-menu .genesis-nav-menu .sub-menu a,
   .sidebar-content-sidebar .content,
   .sidebar-content-sidebar .content-sidebar-wrap,
   .sidebar-primary,
@@ -125,24 +125,26 @@
     margin: 16px auto;
   }
 
-  .js nav.nav-primary,
-  .js .site-header nav  {
-    display: none;
-    position: relative;
+  /* ### Genesis Responsive Menus */
+
+  .genesis-responsive-menu .wrap {
+      padding: 0;
   }
 
-  .js .site-header nav .wrap {
-    padding: 0;
+  .genesis-responsive-menu {
+      display: none;
+      position: relative;
   }
 
-  .js nav.pagination {
-    display: block;
+  .genesis-skip-link .skip-link-hidden {
+      display: none;
+      visibility: hidden;
   }
 
   .menu-toggle,
   .sub-menu-toggle {
-    border-width: 0;
     background-color: #fff;
+    border-width: 0;
     color: #333;
     display: block;
     margin: 0 auto;
@@ -151,89 +153,92 @@
     visibility: visible;
   }
 
-  .sub-menu-toggle:hover,
-  .sub-menu-toggle:focus {
-    border-width: 0;
+  .menu-toggle:focus,
+  .menu-toggle:hover,
+  .sub-menu-toggle:focus,
+  .sub-menu-toggle:hover {
+      background-color: #fff;
+      border-width: 0;
+      color: #c3251d;
   }
 
   .menu-toggle {
-    border-top: 1px solid #eee;
-    line-height: 20px;
-    position: relative;
-    right: 0;
-    z-index: 1000;
-    width: 100%;
+      line-height: 22px;
+      position: relative;
+      width: 100%;
+      z-index: 1000;
   }
 
-  .site-header .menu-toggle {
-    border: 0;
-  }
-
-  .menu-toggle:before,
-  .menu-toggle.activated:before {
-    margin-right: 10px;
-    text-rendering: auto;
-    -webkit-transform: translate(0, 0);
-    -ms-transform:     translate(0, 0);
-    transform:         translate(0, 0);
+  .menu-toggle::before {
+      font-size: 1.5em;
+      margin-right: 10px;
+      text-rendering: auto;
   }
 
   .sub-menu-toggle {
     float: right;
-    padding: 10px;
+    padding: 13px 10px;
     position: absolute;
     right: 0;
     top: 0;
     z-index: 100;
   }
 
-  .sub-menu-toggle:before {
-    display: inline-block;
-    text-rendering: auto;
-    -webkit-transform: translate(0, 0);
-    -ms-transform:     translate(0, 0);
-    transform:         translate(0, 0);
+  .sub-menu .sub-menu-toggle {
+      padding: 12px 10px;
   }
 
-  .sub-menu-toggle.activated:before {
-    content: "\f142";
+  .sub-menu-toggle::before {
+      display: inline-block;
+      text-rendering: auto;
+      -webkit-transform: rotate( 0 );
+      -ms-transform:     rotate( 0 );
+      transform:         rotate( 0 );
+      -webkit-transition: transform .25s ease-in-out;
+      -ms-transition:     transform .25s ease-in-out;
+      transition:         transform .25s ease-in-out;
   }
 
-  .js .nav-primary .genesis-nav-menu .menu-item,
-  .js .site-header .genesis-nav-menu .menu-item {
-    display: block;
-    float: none;
-    margin: 1px 0;
-    position: relative;
-    text-align: left;
+  .sub-menu-toggle.activated::before {
+      -webkit-transform: rotate( 180deg );
+      -ms-transform:     rotate( 180deg );
+      transform:         rotate( 180deg );
   }
 
-  .js .genesis-nav-menu .menu-item:hover {
-    position: relative;
+  .genesis-responsive-menu .genesis-nav-menu .menu-item {
+      display: block;
+      float: none;
+      position: relative;
+      text-align: left;
   }
 
-  .js .nav-primary .genesis-nav-menu .menu-item a,
-  .js .site-header .genesis-nav-menu .menu-item a {
+  .genesis-responsive-menu .genesis-nav-menu .menu-item:focus,
+  .genesis-responsive-menu .genesis-nav-menu .menu-item:hover {
+      position: relative;
+  }
+
+  .genesis-responsive-menu .genesis-nav-menu .menu-item a {
+      border: none;
+      margin-bottom: 1px;
+      padding: 15px 20px;
+      width: 100%;
+  }
+
+  .genesis-responsive-menu .genesis-nav-menu .sub-menu {
     border: none;
-    padding: 12px 0;
-    width: 100%;
   }
 
-  .js .genesis-nav-menu .sub-menu {
-    border: none;
-  }
-
-  .js .genesis-nav-menu .menu-item > a:focus ul.sub-menu,
-  .js .genesis-nav-menu .menu-item > a:focus ul.sub-menu .sub-menu {
+  .genesis-responsive-menu .genesis-nav-menu .menu-item > a:focus ul.sub-menu,
+  .genesis-responsive-menu .genesis-nav-menu .menu-item > a:focus ul.sub-menu .sub-menu {
     left: 0;
     margin-left: 0;
   }
 
-  .js .genesis-nav-menu > .menu-item-has-children > a:after {
+  .genesis-responsive-menu .genesis-nav-menu > .menu-item-has-children > a::after {
     content: none;
   }
 
-  .js .genesis-nav-menu .sub-menu {
+  .genesis-responsive-menu .genesis-nav-menu .sub-menu {
     clear: both;
     display: none;
     margin: 0;
@@ -243,39 +248,23 @@
     width: 100%;
   }
 
-  .js .genesis-nav-menu .sub-menu .sub-menu {
+  .genesis-responsive-menu .genesis-nav-menu .sub-menu .sub-menu {
     margin: 0;
-  }
-
-  .js nav button:hover,
-  .js .menu-toggle:hover,
-  .js .nav-primary {
-    background-color: #fff;
-    color: #000;
-  }
-
-  .js nav button:focus,
-  .js .menu-toggle:focus {
-    background-color: #fff;
-    color: #c3251d;
   }
 
   .footer-widgets-1,
   .footer-widgets-2 {
-    margin: 0 auto 40px;
+      margin: 0 auto 40px;
   }
 
 }
 
 @media only screen and (max-width: 860px) {
 
+  body,
   body > div {
-    font-size: 1.8rem;
-  }
-
-  body {
-    font-size: 18px;
-    font-size: 1.8rem;
+      font-size: 18px;
+      font-size: 1.8rem;
   }
 
   .site-inner {
