--- a/src/scss/layout/_structure.scss
+++ b/src/scss/layout/_structure.scss
@@ -1,4 +1,4 @@
-/* ## Site Containers
+/* Site Containers
 --------------------------------------------- */
 
 .site-inner,
@@ -17,10 +17,10 @@
   max-width: 800px;
 }
 
-/* ## Column Widths and Positions
+/* Column Widths and Positions
 --------------------------------------------- */
 
-/* ### Wrapping div for .content and .sidebar-primary */
+/* Wrapping div for .content and .sidebar-primary */
 
 .content-sidebar-sidebar .content-sidebar-wrap,
 .sidebar-content-sidebar .content-sidebar-wrap,
@@ -37,7 +37,7 @@
   float: right;
 }
 
-/* ### Content */
+/* Content */
 
 .content {
   float: right;
@@ -60,7 +60,7 @@
   width: 100%;
 }
 
-/* ### Primary Sidebar */
+/* Primary Sidebar */
 
 .sidebar-primary {
   float: right;
@@ -72,7 +72,7 @@
   float: left;
 }
 
-/* ### Secondary Sidebar */
+/* Secondary Sidebar */
 
 .sidebar-secondary {
   float: left;
